Add components for students dashboard. Remove fake api. Some cleaning

--- a/dziennik_online_frontend/src/components/navbar/styles.css
+++ b/dziennik_online_frontend/src/components/navbar/styles.css
@@ -29,6 +29,13 @@
     width: 100%;
 }
 
+.nav-menu-sublist .loading {
+    position: relative;
+    width: 50px !important;
+    height: 50px !important;
+    left: 50px;
+}
+
 .nav-menu-list .list-item div {
     display: flex;
     align-items: center;
