--- a/dziennik_online_frontend/src/pages/teacher/statistics/style.css
+++ b/dziennik_online_frontend/src/pages/teacher/statistics/style.css
@@ -1,3 +1,13 @@
+.statistics-modal-container {
+    display: flex;
+    justify-content: center;
+}
+
+.statistics-modal-container .loading {
+    width: 100px;
+    height: 100px;
+}
+
 .statistic-chart {
     width: 40%;
     height: auto;
