--- a/dziennik_online_frontend/src/components/navbar/styles.css
+++ b/dziennik_online_frontend/src/components/navbar/styles.css
@@ -43,8 +43,8 @@
     height: 60px;
 }
 
-.nav-menu-list .list-item #active {
-    background-color: rgb(21, 21, 42);
+.nav-menu-list .list-item.active {
+    background-color: #7162D9;
 }
 
 .nav-menu-list .list-item:not(.list-item-category):hover {
