--- a/dziennik_online_frontend/src/components/main/style.css
+++ b/dziennik_online_frontend/src/components/main/style.css
@@ -5,4 +5,11 @@
 .title-row {
     margin-top: 30px;
     margin-bottom: 100px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
+.outlet {
+    padding-left: 0;
+    margin-left: 0;
 }
