--- a/dziennik_online_frontend/src/pages/teacher/statistics/style.css
+++ b/dziennik_online_frontend/src/pages/teacher/statistics/style.css
@@ -1,30 +1,55 @@
 .statistics-modal-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .statistics-modal-container .loading {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .statistic-chart {
-    width: 40%;
-    height: auto;
+  width: 40%;
+  height: auto;
 }
 .custom-tooltip {
-    width: 200px;
-    margin: 0;
-    line-height: 24px;
-    border: 1px solid #f5f5f5;
-    background-color: hsla(0,0%,100%,.9);
-    padding: 10px;
+  width: 200px;
+  margin: 0;
+  line-height: 24px;
+  border: 1px solid #f5f5f5;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  padding: 10px;
 }
 .btn {
-    background: #7162D9;
-    border: 0;
-    border-radius: 0;
+  background: #7162d9;
+  border: 0;
+  border-radius: 0;
 }
 .btn:hover {
-    background: #564ba3;
+  background: #564ba3;
+}
+
+span.grade:after {
+  content: ", ";
+}
+span.grade:last-of-type:after {
+  content: "";
+}
+
+.grade-cell-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.grade-cell {
+  justify-content: flex-end;
+  display: flex;
+  align-items: center;
+}
+
+.grade-cell-start {
+  justify-content: flex-start;
+  display: flex;
+  align-items: center;
 }
